--- a/css/ma_ver_asistencia.css
+++ b/css/ma_ver_asistencia.css
@@ -1,43 +1,28 @@
-
-body
-{
-
-background: url(../imges/im_ver_as.jpg);
+body{
+	background: url("../images/12.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center; 
 }
-
-header 
-{	
-
+.table{
+    background: #fff;
+}
+header {
 	margin-top: 4%;
 	margin-right: 2%;
 	margin-left: 2%;
 	text-align: center;
-
 }
-
-section 
-{
-
+section {
 	margin-right: 2%;
 	margin-left: 2%;
 }
-
-.pad-basic
-
-{
-padding:.5%; 
-	
+.pad-basic{
+padding:.5%; 	
 }
-
-.no-btm
-{
+.no-btm{
 	margin-bottom:0%;
 }
-
-.btn-der
-{
+.btn-der{
 	text-align: right;
 }
-
-
-
